fix horizontal scroll because of shape-8-mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1235,7 +1235,7 @@ section {
     display: block;
     height: 260px;
     position: absolute;
-    right: -2.4em;
+    right: -2em;
     bottom: 0px;
   }
 
